--- a/FoundMagic/FoundMagic.csproj
+++ b/FoundMagic/FoundMagic.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RogueSharp" Version="4.2.0" />
+  </ItemGroup>
+
 </Project>
