--- a/FoundMagic/FoundMagic.csproj
+++ b/FoundMagic/FoundMagic.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <StartupObject>FoundMagic.Program</StartupObject>
+		<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
