Monster types are now loaded from a JSON file. But still just slimes...

--- a/FoundMagic/FoundMagic.csproj
+++ b/FoundMagic/FoundMagic.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="RogueSharp" Version="4.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="MonsterTypes.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
