Move MonsterTypes.json into a Data folder

--- a/FoundMagic/FoundMagic.csproj
+++ b/FoundMagic/FoundMagic.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="MonsterTypes.json">
+    <None Update="Data\MonsterTypes.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
